--- a/Introduction_to_Python.ipynb
+++ b/Introduction_to_Python.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/minooshayan97/Week1-Intro-to-Python/blob/myActiveBranch/Introduction_to_Python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Ninavo15/Week1-Intro-to-Python/blob/ass1/Introduction_to_Python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "E8eBm4tQyOkz",
         "outputId": "000542b2-5407-42ec-e933-cfffc535e255",
@@ -192,6 +192,30 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "a=20 #example 1 about declaring a variable\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "X5BOCYTUFAYO",
+        "outputId": "71bd2f63-c56d-4e37-efb1-c0c5c06de7a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "zpsVx_N_yOk2"
@@ -214,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "wWSaGwfzyOk2",
         "outputId": "fb3dbb66-5d74-44cc-c523-976d4299a7f7",
@@ -308,6 +332,32 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "10-2+4 #exmaple 2 about numbers"
+      ],
+      "metadata": {
+        "id": "qHdjUn7rE9pv",
+        "outputId": "0bbadad5-8572-405d-d585-4f14c75c8537",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "6v9gnHCcyOk3"
@@ -351,6 +401,32 @@
         "Course=\"Artificial Intelligence\"\n",
         "name='Sara'\n",
         "print(name, Course)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Example 3 about string\n",
+        "name=\"Nina\"\n",
+        "job='student'\n",
+        "print(name,job)"
+      ],
+      "metadata": {
+        "id": "jG3-3A7DFVfQ",
+        "outputId": "72e0913c-894c-4d96-d720-fc05cc56b55d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nina student\n"
+          ]
+        }
       ]
     },
     {
@@ -403,6 +479,34 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#example 4 about using index to access a character in strings\n",
+        "stringVar=\"Nina is 21 and she is a student\"\n",
+        "\n",
+        "print(stringVar[3])\n",
+        "print(stringVar[0:14])\n"
+      ],
+      "metadata": {
+        "id": "CGCRvoKxFMZg",
+        "outputId": "e64e87c3-2455-4257-daa2-17d957e1e472",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n",
+            "Nina is 21 and\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "kY4lddAsyOk8"
@@ -447,6 +551,32 @@
         "\n",
         "\n",
         "print(\"updated string:\",stringVariable)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#example 5 about updating string by replacing\n",
+        "text = \"Hello, World!\"\n",
+        "text = text.replace(\"World\", \"Nina\")\n",
+        "print(text)"
+      ],
+      "metadata": {
+        "id": "xHmik3M5FPii",
+        "outputId": "bcedf729-45d4-48ad-d090-15634094603f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, Nina!\n"
+          ]
+        }
       ]
     },
     {
@@ -507,6 +637,24 @@
         "del stringVariable\n",
         "print(stringVariable)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#example 6 about deleting a value of string\n",
+        "first_name = \"Nina\"\n",
+        "last_name = \"Vo\"\n",
+        "print(first_name, last_name)\n",
+        "\n",
+        "del first_name\n",
+        "print(last_name)\n",
+        "print(first_name, last_name)\n"
+      ],
+      "metadata": {
+        "id": "RiPEf7tlFi5m"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
